--- a/src/_cover.html
+++ b/src/_cover.html
@@ -1,3 +1,3 @@
-<div id="cover-image" style="img { max-width:100%; }">
+<div id="cover-image" class="cover-image">
   <img src="images/cover.jpg" alt="cover"/>
 </div>
